Ya funca el APIgit add --all .

--- a/public/templates/index.dust
+++ b/public/templates/index.dust
@@ -1,5 +1,8 @@
 {>"layouts/master" /}
 
 {<body}
-    <h1>{@pre type="content" key="greeting"/}</h1>
+    <h1>{MovieCount} Peliculas</h1>
+    {#MovieList}
+    <a href="{TorrentUrl}"><img src="{CoverImage}" /></a>
+    {/MovieList}
 {/body}
